Fix single/twin folders being center-aligned instead of left-aligned

--- a/src/less/components/entries.less
+++ b/src/less/components/entries.less
@@ -17,16 +17,12 @@
   i {
     margin-right: 1.4rem;
   }
-
-  &:active {
-    background: @gray;
-  }
 }
 
 .grid .file, .grid .directory {
-  flex: 1 0 30%;
+  flex: 1 0 33.33%;
 
-  max-width: 30%;
+  max-width: 33.33%;
 
   padding: 1.4rem 0.5rem;
 
@@ -59,6 +55,10 @@
 
   p {
     flex: 1 1;
+  }
+
+  &:active {
+    background: @gray;
   }
 }
 
