--- a/src/less/components/file-list.less
+++ b/src/less/components/file-list.less
@@ -9,8 +9,4 @@
 
   overflow-x: hidden;
   overflow-y: auto;
-
-  &.grid {
-    justify-content: space-between;
-  }
 }
